page wide issue fixing

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <title>Tuhin Mukherjee</title>
   <link rel="stylesheet" type="text/css" href="css/index.css">
+  <link rel="stylesheet" href="css/page-banner.css">
+  <link rel="stylesheet" href="css/nav.css">
   <!--fonts-->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
   <link href='https://fonts.googleapis.com/css?family=Averia Sans Libre' rel='stylesheet'>
@@ -80,7 +82,6 @@
       <span class="text2">To My Chapter</span>
     </div>
   </div>
-  <div class="main-box">
     <div class="container2">
 
     </div>
@@ -92,7 +93,6 @@
         <span class="about-text2">About Myself.</span>
       </div>
 
-      <img src="images/dp.jpg" alt="profile-pic" class="dp animate-right">
       <p class="about-p animate-left"><span style="font-size:40px;"><strong>I</strong></span> am a 22 years old aspiring software engineer, presently studying <em style="font-size:25px;">Computer Science Engineering from Hooghly Engineering and
           Technology College.</em>
         I am very focused and Concerned in establishing a well defined career in the <strong>technology</strong> field. I have Completed my schooling from <em>St. Luke's Day School</em>,with Science and computer as my additional subject. My idea
@@ -105,38 +105,37 @@
         robotics projects in free time or to go for a hangout with friends because my heart always craves for travelling.
         I like to utilize my time by any means possible in a productive way. I am a firm believer of passion and determination can lead anyone to success its just a matter of time. I am also an avid photographer, learner and an animal lover because
         <em>i believe "life" is the most precious gift we all have</em>.
-      </p>
+      </p><br><br><br><br><br><br>
       <hr class="hr">
       <h3 class="about-h3"><span class="animate-left" style="font-size:60px;">Few </span><span class="animate-right" style="font-size:25px;letter-spacing:4px;">Achievements & Certificates</span></h3><br>
-      <div class="certificate-box">
         <div class="ML">
-          <h2 class="about-card-title">Winter Training on Machine Learning with Python 2019-2020</h2>
-          <img class="about-card-img" src="images/ML.jpg" alt="certificate" style="float:left">
-          <img class="about-card-img" src="images/projectml.jpg" alt="certificate" style="float:right">
-          <p class="about-pp animate-bottom">I was so much facinated and excited to learn about <strong>Machine Learning</strong> that i did this certification while i was in first year and i am still learning and polishing my machime learning
-            skills since then.</p>
-        </div>
-        <div class="workshop">
-          <h2 class="about-card-title">Some technical workshops from MyWBUT Solutions year:2020</h2>
-          <img class="about-card-img" src="images/workshops/corejava.jpg" alt="certificate" style="float:left;">
-          <img class="about-card-img" src="images/workshops/webdevelopement.jpg" alt="certificate" style="float:right;">
-          <p class="about-pp animate-bottom">In 2020 as COVID-19 hit hard & everything was going on digitally i thought to pursue some online workshops to upgrade my <em>skills and knowledge</em></p>
-        </div>
-        <div class="nptel">
-          <h2 class="about-card-title">NPTEL Certificates</h2>
-          <img class="about-card-img animate-left" src="images/workshops/Ethics in Engineering Practice certificate.jpg" alt="certificate">
-          <img class="about-card-img" src="images/workshops/Technicalenglish.jpg" alt="certificate">
-          <img class="about-card-img animate-right" src="images/workshops/The Joy of Computing using Python.jpg" alt="certificate">
-        </div>
-        <div class="udemy">
-          <h2 class="about-card-title">Udemy & Coursera Certificates</h2>
-          <img class="about-card-img animate-left" src="images/workshops/ethicalhacking.jpg" alt="certificate">
-          <img class="about-card-img" src="images/workshops/pythonforbeginners.jpg" alt="certificate">
-          <img class="about-card-img animate-right" src="images/workshops/Coursera DL certificate-page-001.jpg" alt="certificate">
-          <img class="about-card-img" src="images/workshops/successfull carrer developement-page-001.jpg" alt="certificate">
-        </div>
-
+        <h2 class="about-card-title">Winter Training on Machine Learning with Python 2019-2020</h2>
+        <img class="about-card-img" src="images/ML.jpg" alt="certificate" style="float:left">
+        <img class="about-card-img" src="images/projectml.jpg" alt="certificate" style="float:right">
+        <p class="about-pp animate-bottom">I was so much facinated and excited to learn about <strong>Machine Learning</strong> that i did this certification while i was in first year and i am still learning and polishing my machime learning
+          skills since then.</p>
       </div>
+      <div class="workshop">
+        <h2 class="about-card-title">Some technical workshops from MyWBUT Solutions year:2020</h2>
+        <img class="about-card-img" src="images/workshops/corejava.jpg" alt="certificate" style="float:left;">
+        <img class="about-card-img" src="images/workshops/webdevelopement.jpg" alt="certificate" style="float:right;">
+        <p class="about-pp animate-bottom">In 2020 as COVID-19 hit hard & everything was going on digitally i thought to pursue some online workshops to upgrade my <em>skills and knowledge</em></p>
+      </div>
+      <div class="nptel">
+        <h2 class="about-card-title">NPTEL Certificates</h2>
+        <img class="about-card-img animate-left" src="images/workshops/Ethics in Engineering Practice certificate.jpg" alt="certificate" style="float:left">
+        <img class="about-card-img" src="images/workshops/Technicalenglish.jpg" alt="certificate" style="padding:3%;margin-left:100px;">
+        <img class="about-card-img animate-right" src="images/workshops/The Joy of Computing using Python.jpg" alt="certificate" style="float:right">
+      </div>
+      <div class="udemy">
+        <h2 class="about-card-title">Udemy & Coursera Certificates</h2>
+        <img class="about-card-img animate-left" src="images/workshops/ethicalhacking.jpg" alt="certificate" style="float:left;">
+        <img class="about-card-img" src="images/workshops/pythonforbeginners.jpg" alt="certificate" style="padding:3%;margin-left:100px;">
+        <img class="about-card-img animate-right" src="images/workshops/Coursera DL certificate-page-001.jpg" alt="certificate" style="float:right;">
+        <br>
+        <img class="about-card-img" src="images/workshops/successfull carrer developement-page-001.jpg" alt="certificate" style="float:left;" >
+      </div>
+
     </section>
     <hr>
     <section id="Projects">
@@ -404,15 +403,13 @@
     </section>
 
 
-
-
     <footer id="footer">
 
       <strong>© Copyright 2020</strong>
       <span>|</span>
       <span class="footer-text1">Tuhin Mukherjee</span>
     </footer>
-  </div>
+
 
 
 
